Fix:Posição da imagem do banner central

--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,8 @@ header nav {
 }
 
 .middleImg {
-    margin-left: 113px;
+    position: relative;
+    left: 18%;
     display: flex;
     justify-content: right;
 }
