--- a/css/main.css
+++ b/css/main.css
@@ -185,8 +185,34 @@ header nav {
 .line-3t {
     transform: rotate(-45deg);
 }
+/* ===================== caroussel     ======================= */
+ 
+
+.carousel {
+    width: 100%;
+    height: 608px;
+    background-color: #003061;
+    display: flex;
+    justify-content: center; 
+    
+}
+
+.button {
+    position:absolute;
+    right: 50px;
+    top: 400px;
+    
+}
+
+.btn-warning {
+    border-radius: 40px;
+    
+}
+
+
 
 /* ===================== Meio da página ======================= */
+
 
 .middleBanner {
     display: flex;
