--- a/css/main.css
+++ b/css/main.css
@@ -189,31 +189,43 @@ header nav {
 /* ===================== Banners ======================= */
 
 .middleBanner {
+    margin-top: 92px;
+    height: 507px;
+    width: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .middleTxt {
+    width: 500px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    text-align: justify;
     margin: 50px;
 }
 
+.div-vazia {
+    width: 60px;
+    background-color: #003061;
+}
+
 .middleTxt h1 {
+    font-size: 36pt;
     color: #003061;
-    font-family:'Russo One', sans-serif;
+    font-family: 'Russo One', sans-serif;
 }
 
 .middleTxt p {
+    font-size: 24pt;
     color: #000000;
-    font-family:'Oswald', sans-serif;
+    font-family: 'Oswald', sans-serif;
 }
 
 .middleImg {
+    display: flex;
+    justify-content: flex-end;
     width: 782px;
-    max-width: 100%;
 }
 
 /* ========================= footer =========================== */
