--- a/css/main.css
+++ b/css/main.css
@@ -51,13 +51,13 @@
     height: 60px;
     bottom: 20px;
     right: 20px;
-    background-color: #25d366;
+    background-color: #1a9748;
     color: #fff;
     border-radius: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: 5px 5px 2px #888;
+    box-shadow: 5px 5px 2px rgb(58, 54, 54);
     z-index: 1000;
     animation: pulse 0.9s infinite;
     animation-direction: alternate;
@@ -71,7 +71,7 @@
 }
 
 .whatsapp-link img {
-    height: 40px;
+    height: 45px;
 }
 
 /* ========================= Cabeçalho =========================== */
@@ -184,112 +184,6 @@ header nav {
 
 .line-3t {
     transform: rotate(-45deg);
-}
-/* ===================== caroussel     ======================= */
- 
-
-.carousel {
-    width: 100%;
-    height: 608px;
-    background-color: #003061;
-    display: flex;
-    align-items: center;
-    justify-content: center; 
-    margin-top: 92px;    
-    /* border: 3px solid red; */
-    
-}
-.carousel-item {
-  
-    width: 99%;
-    height: 550px;
-    color: white;
-    /* border: 3px solid black;  */
-
-}
-.containercar {
-    width: 98%;
-    height: 500px;
-    display: flex;
-    align-items: center;
-    justify-content:space-around;
-    gap: 10rem;
-    /* border: 3px solid purple; */
-}
-.imagemcar {
-    display: flex;
-    display: flex;
-    flex-direction: column;
-    align-items: center;  
-    justify-content: center;  
-    /* border: 3px solid black; */
-    
-}
-.bloco {
-   
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-family: Russo One;
-    font-size: 75px;
-    /* border: 3px solid #25d366; */
-}
-
-.btn {
-    font-family: Oswald;
-    border-radius: 50px;
-    box-shadow: 5px 10px 10px #000;
-    font-size: 36px;
-    color: #003061;  
-    
-}
-
-
-
-
-
-/* ===================== Banners ======================= */
-
-
-.middleBanner {
-    margin-top: 92px;
-    height: 507px;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.middleTxt {
-    width: 500px;
-    display: flex;
-    flex-direction: column;
-    margin: 50px;
-}
-
-.div-vazia {
-    width: 60px;
-    background-color: #003061;
-}
-
-.middleTxt h1 {
-    font-size: 36pt;
-    color: #003061;
-    font-family: 'Russo One', sans-serif;
-}
-
-.middleTxt p {
-    font-size: 24pt;
-    color: #000000;
-    font-family: 'Oswald', sans-serif;
-}
-
-.middleImg {
-    display: flex;
-    justify-content: flex-end;
-    width: 782px;
 }
 
 /* ========================= footer =========================== */
