--- a/css/home.css
+++ b/css/home.css
@@ -1,44 +1,48 @@
 /* ===================== caroussel     ======================= */
- 
+
 .carousel {
     width: 100%;
     height: 608px;
     background-color: #003061;
     display: flex;
     align-items: center;
-    justify-content: center; 
-    margin-top: 92px;    
+    justify-content: center;
+    margin-top: 92px;
     /* border: 3px solid red; */
-    
+
 }
+
 .carousel-item {
-  
+
     width: 99%;
     height: 550px;
     color: white;
     /* border: 3px solid black;  */
 
 }
+
 .containercar {
     width: 98%;
     height: 500px;
     display: flex;
     align-items: center;
-    justify-content:space-around;
+    justify-content: space-around;
     gap: 10rem;
     /* border: 3px solid purple; */
 }
+
 .imagemcar {
     display: flex;
     display: flex;
     flex-direction: column;
-    align-items: center;  
-    justify-content: center;  
+    align-items: center;
+    justify-content: center;
     /* border: 3px solid black; */
-    
+
 }
+
 .bloco {
-   
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,8 +57,8 @@
     border-radius: 50px;
     box-shadow: 5px 10px 10px #000;
     font-size: 36px;
-    color: #003061;  
-    
+    color: #003061;
+
 }
 
 /* ===================== Banners ======================= */
@@ -97,4 +101,60 @@
     display: flex;
     justify-content: flex-end;
     width: 782px;
+}
+
+/* ========================= section3 =========================== */
+.sec3 {
+    width: 100%;
+    height: 608px;
+    background-color: #003061;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 3px solid #25d366;
+}
+
+.in-sec3 {
+
+    width: 95%;
+    height: 487px;
+    left: 62px;
+    top: 1266px;
+    background-color: #FFFFFF;
+    border-radius: 25px;
+    border: 3px solid #25d366;
+
+
+}
+
+/* ========================= section4 =========================== */
+
+.bottomBanner {
+    height: 530px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    border: 3px solid #25d366;
+
+
+}
+
+.bottomTxt {
+    color: #003061;
+    width: 522px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: Russo One;
+    border: 3px solid #25d366;
+
+}
+
+
+.bottomImg {
+    width: 571px;
+    height: 381px;
+
+
+    border: 3px solid #25d366;
 }
