--- a/css/contato.css
+++ b/css/contato.css
@@ -46,7 +46,7 @@ body {
 
 #article01 h2 {
     font-family: 'Russo One', sans-serif;
-    font-size: 64pt;
+    font-size: 52pt;
     color: #003061;
 }
 
@@ -101,10 +101,12 @@ body {
     align-items: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
-    border-right: 1px solid #d8d3d3;
+    padding-bottom: 20px;
 }
 
 .formulario h2 {
+    width: 100%;
+    margin-left: 20px;
     font-family: 'Russo One', sans-serif;
     font-size: 64pt;
     color: #003061;
@@ -120,21 +122,14 @@ body {
 }
 
 .mapa p {
+    width: 80%;
     margin-top: 20px;
     font-size: 1vw;
 }
 
-.mapouter {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 700px;
-    width: 600px;
-}
-
-.gmap_canvas {
-    width: 80%;
+iframe {
     height: 80%;
+    width: 80%;
 }
 
 .form {
@@ -227,7 +222,7 @@ body {
     /* ========================= article 01 =========================== */
 
     #article01 h2 {
-        font-size: 8vw;
+        font-size: 7vw;
     }
 
     #article01 img {
@@ -247,6 +242,35 @@ body {
 
     #article01 {
         height: 350px;
+    }
+
+    /* ========================= article 02 =========================== */
+
+    #article02 {
+        margin: 30px 15px 20px 15px;
+        flex-wrap: nowrap;
+        flex-direction: column;
+    }
+
+    .formulario {
+        margin-top: 20px;
+        border: none;
+        width: 90%;
+    }
+
+    .formulario h2 {
+        font-size: 7vw;
+    }
+
+    .mapa {
+        margin-top: 20px;
+        width: 90%;
+        height: 90%;
+    }
+
+    .mapa p {
+        font-size: 3vw;
+        padding-bottom: 20px;
     }
 
 }
