--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -28,7 +28,7 @@
     padding-top: 3%;
     padding-bottom: 3%;
     background-color: #1E1E1E;
-    border-radius: 3%;
+    border-radius: 20px;
 }
 
 .middleTxtTitleSecondPage {
