--- a/css/home.css
+++ b/css/home.css
@@ -125,7 +125,7 @@
     gap: 10rem;
     background-color: #FFFFFF;
     border-radius: 25px;
-    border: 3px solid black;
+    /* border: 3px solid black; */
 }
 .logos {
     width: 35%;
@@ -167,7 +167,7 @@
     display: flex;
     align-items: center;
     justify-content: space-around;
-    border: 3px solid #25d366;
+    /* border: 3px solid #25d366; */
 
 
 }
@@ -179,7 +179,7 @@
     flex-direction: column;
     justify-content: center;
     font-family: Russo One;
-    border: 3px solid #25d366;
+    /* border: 3px solid #25d366; */
 
 }
 
@@ -189,5 +189,5 @@
     height: 381px;
 
 
-    border: 3px solid #25d366;
+    /* border: 3px solid #25d366; */
 }
