--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -32,7 +32,7 @@
 }
 
 .middleTxtTitleSecondPage {
-    font-family: 'Russo One';
+    font-family: 'Russo One', sans-serif;;
     font-size: 48px;
     font-weight: 400;
     text-align: left;
@@ -43,7 +43,7 @@
 }
 
 .middleTxtParagraphSecondPage {
-    font-family: 'Oswald';
+    font-family: 'Oswald', sans-serif;;
     font-size: 32px;
     font-weight: 300;
     text-align: right;
@@ -65,7 +65,7 @@
 }
 
 .middleBannerTxtSecondPage {
-    font-family: 'Oswald';
+    font-family: 'Oswald', sans-serif;;
     font-size: 20px;
     font-weight: 300;
     position: absolute;
@@ -76,7 +76,7 @@
 }
 
 .middleBannerTitleSecondPage {
-    font-family: 'Oswald';
+    font-family: 'Oswald', sans-serif;;
     font-size: 20px;
     font-weight: 300;
 }
@@ -99,7 +99,7 @@
 }
 
 .bottomTittleSecondPage {
-    font-family: 'Russo One';
+    font-family: 'Russo One', sans-serif;;
     font-size: 48px;
     font-weight: 400;
     color: #FFFFFF;
@@ -107,16 +107,49 @@
 }
 
 .bottomParagraphSecondPage {
-    font-family: 'Russo One';
-    font-size: 26px;
+    font-family: 'Oswald', sans-serif;
+    font-size: 28px;
+    font-weight: 300;
     color: #FFFFFF;
-    width: 93%;
+    width: 66%;
     text-align: center;
-    font-weight: 400;
     margin-top: 1%;
 }
 
+.boxRow {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: 3%;
+}
 
+.box {
+    height: 433px;
+    width: 410px;
+    background-color: #FFFFFF;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 2%;
+    margin: 1%;
+}
+
+.boxTxtTittle {
+    font-family: 'Oswald', sans-serif;;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.boxTxt {
+    font-family: 'Oswald', sans-serif;;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 200;
+    width: 100%;
+}
 
 /* ========================= mobile =========================== */
 
