--- a/css/contato.css
+++ b/css/contato.css
@@ -42,6 +42,7 @@ body {
     flex-direction: column;
     align-items: left;
     justify-content: space-evenly;
+    border: 3px solid red;
 }
 
 #article01 h2 {
