--- a/css/servicos.css
+++ b/css/servicos.css
@@ -60,7 +60,7 @@
     gap: 50px;
     text-align: center;
     font-family: 'Oswald', light;
-    font-size: 24pt;
+    font-size: 24pt;    
 }
 
 /* section3 ================================================*/
@@ -71,7 +71,6 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
     /* border: 3px solid green; */
 }
 
@@ -86,23 +85,34 @@
     align-items: center;
     justify-content: space-evenly;
     gap: 3rem;
-
     /* border: 3px solid red; */
 
 }
 
 .bloco1sec3 {
-    width: 33%;
+    width: 37%;
     height: 75%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* border: 3px solid red; */
-
+    /* border: 3px solid red;  */
+    
 }
 
+.bloco1sec3 img{
+    display: flex;
+    
+    
+}
+
+.bloco1sec3B h2 {
+    font-family: 'Oswald', SemiBold;
+    font-size: 20px;
+    margin: 30px;
+ }
+
 .bloco1sec3B {
-    font-family: oswald;
+    font-family: 'Oswald', medium;
     font-size: 20px;
     text-align: center;
 
@@ -110,7 +120,7 @@
 }
 
 .bloco2sec3 {
-    width: 33%;
+    width: 37%;
     height: 75%;
     display: flex;
     flex-direction: column;
@@ -119,8 +129,19 @@
 
 }
 
+.bloco2sec3B img {
+    display: flex;
+}
+
+.bloco2sec3B h2 {
+    font-family: 'Oswald', SemiBold;
+    font-size: 20px;
+    margin: 30px;
+
+}
+
 .bloco2sec3B {
-    font-family: Oswald;
+    font-family: 'Oswald' , medium;
     font-size: 20px; 
     text-align: center;   
 }
