--- a/css/contato.css
+++ b/css/contato.css
@@ -2,13 +2,11 @@ body {
     background-color: #003061;
 }
 
-/* ========================= Banner =========================== */
-
 #section01 {
     margin-top: 92px;
     width: 100%;
     height: 608px;
-    background-image: url(/assets/fundo-contatos.svg);
+    background-image: url(/assets/contato/fundo-contatos.svg);
     background-size: cover;
 }
 
@@ -21,8 +19,6 @@ body {
     top: 150px;
     right: 150px;
 }
-
-/* ========================= article 01 =========================== */
 
 #article01 {
     width: 100%;
@@ -80,8 +76,6 @@ body {
     -webkit-animation-name: pulse;
     animation-name: pulse;
 }
-
-/* ========================= article 02 =========================== */
 
 #article02 {
     margin: 70px 50px 70px 50px;
@@ -203,8 +197,6 @@ iframe {
 
 @media(max-width:994px) {
 
-    /* ========================= banner =========================== */
-
     #section01 {
         height: 411px;
     }
@@ -218,8 +210,6 @@ iframe {
         margin-top: 92px;
         text-align: center;
     }
-
-    /* ========================= article 01 =========================== */
 
     #article01 h2 {
         font-size: 7vw;
@@ -243,8 +233,6 @@ iframe {
     #article01 {
         height: 350px;
     }
-
-    /* ========================= article 02 =========================== */
 
     #article02 {
         margin: 30px 15px 20px 15px;
