--- a/css/servicos.css
+++ b/css/servicos.css
@@ -136,7 +136,7 @@
 .bloco2sec3B h2 {
     font-family: 'Oswald', SemiBold;
     font-size: 20px;
-    margin: 30px;
+    margin: 35px;
 
 }
 
@@ -150,7 +150,95 @@
 
 .sec4 {
     width: 100%;
-    height: 50%;
-    border: 3px solid red;
+    height: 761px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    
+    border: 3px solid red; 
+
+}
+
+.bloco1sec4 {
+    width: 470px;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0px 20px 0px 20px;
+    
+    /* border: 3px solid red;   */
+}
+
+.bloco1sec4 h2 {
+    font-family: 'Oswald' ,Bold ;
+    font-size: 24px;
+    margin: 60px;
+
+    /* border: 3px solid black; */
+}
+
+.bloco1sec4 p {
+    width: 100%;
+    font-family: 'Oswald' ,Extra light;
+    font-size: 24px;
+    
+   /* border: 3px solid red; */
+}
+
+
+
+.bloco2sec4 {
+    width: 470px;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0px 20px 0px 20px;
+   
+    /* border: 3px solid red; */
+}
+
+.bloco2sec4 h2 {
+    font-family: 'Oswald' ,Bold;
+    font-size: 24px;
+    margin: 60px;
+}
+
+.bloco2sec4 p {
+    width: 100%;
+    font-family: 'Oswald', Extra Light;
+    font-size: 24px;
+}
+
+.bloco3sec4 {
+    width: 470px;
+    height: 85%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin: 0px 20px 0px 20px;
+
+    /* border: 3px solid red; */
+}
+
+.bloco3sec4 h2 {
+    font-family: 'Oswald' , Bold;
+    font-size: 24px;
+    margin: 60px;
+}
+
+.bloco3sec4 p {
+    width: 100%;
+    font-family: 'Oswald', extra-light;
+    font-size: 24px;
+}
+
+.section5 {
+    
+    
 
 }
