--- a/css/servicos.css
+++ b/css/servicos.css
@@ -37,22 +37,27 @@
 .sec2 {
     width: 100%;
     height: 507px;
-    color: white;
     background-color: #1e1e1e;
     display: flex;
     align-items: center;
-    justify-content: center;  
+    justify-content: center; 
+
     /* border: 3px solid red;  */
 }
 
 .sec2txt h2 {
-    
     width:65%;
+    height: 400;
     font-family: Russo One;
+    font-size: 36px;
+    line-height: 43.38px;
+    align-items: center;
 }
 
 .sec2txt {
-    width: 75%;
+    width: 70%;
+    height: 219px;
+    position: absolute;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -60,7 +65,11 @@
     gap: 50px;
     text-align: center;
     font-family: 'Oswald', light;
+    font-style: normal;
+    font-weight: 300;
+    line-height: 36px;
     font-size: 24pt;    
+    color: #FFFFFF;
 }
 
 /* section3 ================================================*/
@@ -77,39 +86,54 @@
 
 .sec3 {
     width: 98%;
-    height: 96%;
+    height: 765px;
     background-color: #003061;
     color: #FFFFFF;
     border-radius: 25px;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    gap: 3rem;
     /* border: 3px solid red; */
 
 }
 
 .bloco1sec3 {
-    width: 37%;
+    width: 30%;
     height: 75%;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: space-between;
-    /* border: 3px solid red;  */
+    
+    /* border: 3px solid red;   */
     
 }
 
-.bloco1sec3 img{
-    display: flex;
-    
-    
+.bloco1sec3 img {
+    width: 493px;
+    height: 265px;
+    top: 1352;
 }
 
-.bloco1sec3B h2 {
-    font-family: 'Oswald', SemiBold;
-    font-size: 20px;
+.bloco1sec3 h2 {
+    margin: 40px;
+}
+
+.bloco1sec3B {
     margin: 30px;
+    width: 493px;
+    height: 306px;
+    top: 1617px;
+    font-family: 'Oswald', Semi Bold;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+    /* border: 3px solid red; */
  }
+
 
 .bloco1sec3B {
     font-family: 'Oswald', medium;
@@ -120,30 +144,39 @@
 }
 
 .bloco2sec3 {
-    width: 37%;
+    width: 30%;
     height: 75%;
     display: flex;
+    align-items: center;
     flex-direction: column;
-    justify-content: space-between;
+    
     /* border: 3px solid red; */
 
 }
 
 .bloco2sec3B img {
-    display: flex;
+    width: 493px;
+    height: 265px;
+    top: 1352;
 }
 
 .bloco2sec3B h2 {
-    font-family: 'Oswald', SemiBold;
-    font-size: 20px;
     margin: 35px;
-
 }
 
 .bloco2sec3B {
-    font-family: 'Oswald' , medium;
+    margin: 30px;
+    width: 493px;
+    height: 306px;
+    top: 1617px;
+    font-family: 'Oswald', Semi Bold;
+    font-style: normal;
+    font-weight: 500;
     font-size: 20px; 
+    display: flex;
+    align-items: center;
     text-align: center;   
+    flex-direction: column;
 }
 
 /* section 4 ========================================= */
@@ -155,90 +188,162 @@
     align-items: center;
     justify-content: space-evenly;
     
-    border: 3px solid red; 
+    /* border: 3px solid red;  */
 
 }
 
 .bloco1sec4 {
-    width: 470px;
+    width: 430px;
     height: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 0px 20px 0px 20px;
+    margin: 100px 20px 0px 20px;
     
-    /* border: 3px solid red;   */
+    /* border: 3px solid red;    */
 }
 
-.bloco1sec4 h2 {
-    font-family: 'Oswald' ,Bold ;
-    font-size: 24px;
-    margin: 60px;
 
-    /* border: 3px solid black; */
+.bloco1sec4 h2 {
+    margin: 50px;
+    font-family: 'Oswald' ,bold;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 36px;
+    text-align: center;
+    
+    /* border: 3px solid red; */
 }
 
 .bloco1sec4 p {
-    width: 100%;
-    font-family: 'Oswald' ,Extra light;
+    width: 349px;
+    height: 391px;
+    font-family: 'Oswald', Extra light;
+    font-style: normal;
+    font-weight: 700;
     font-size: 24px;
+    line-height: 36px;
+    text-align: center;
     
-   /* border: 3px solid red; */
+    /* border: 3px solid black;  */
 }
 
 
-
 .bloco2sec4 {
-    width: 470px;
+    width: 430px;
     height: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 0px 20px 0px 20px;
+    margin: 100px 20px 0px 20px;
    
     /* border: 3px solid red; */
 }
 
 .bloco2sec4 h2 {
+    margin: 50px;
     font-family: 'Oswald' ,Bold;
+    font-style: normal;
+    font-weight: 700;
     font-size: 24px;
-    margin: 60px;
+    line-height: 36px;
+    text-align: center;
 }
 
 .bloco2sec4 p {
-    width: 100%;
-    font-family: 'Oswald', Extra Light;
+    width: 349px;
+    height: 391px;
+    font-family: 'Oswald', Extra light;
+    font-style: normal;
+    font-weight: 700;
     font-size: 24px;
+    line-height: 36px;
+    text-align: center;
 }
 
 .bloco3sec4 {
-    width: 470px;
+    width: 430px;
     height: 85%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin: 0px 20px 0px 20px;
+    margin: 100px 20px 0px 20px;
 
     /* border: 3px solid red; */
 }
 
 .bloco3sec4 h2 {
-    font-family: 'Oswald' , Bold;
+    margin: 50px;
+    font-family: 'Oswald' ,bold;
+    font-style: normal;
+    font-weight: 700;
     font-size: 24px;
-    margin: 60px;
+    line-height: 36px;
+    text-align: center;
 }
 
 .bloco3sec4 p {
-    width: 100%;
-    font-family: 'Oswald', extra-light;
+    width: 349px;
+    height: 391px;
+    font-family: 'Oswald', Extra light;
+    font-style: normal;
+    font-weight: 700;
     font-size: 24px;
+    line-height: 36px;
+    text-align: center;
 }
 
-.section5 {
+/* ================================section 5======================= */
+
+.sec5 {
+    width: 100%;
+    height: 120px;
+    margin-top: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    
+    /* border: 3px solid black; */
+}
     
     
 
+.sec5 h1 {
+    font-family: Russo One;
+    font-size: 58pt;
+    margin-bottom:51px ;
+    color: #003061;
 }
+
+/* ==================carousel  ========================== */
+
+.carousel {
+    width: 100%;
+    height: 380px;
+   
+    background-color: #003061;
+}
+
+.carousel-item {
+    padding: 100px;
+}
+.carouselImg {
+    width: 100%;
+    height: 100%;
+   display: flex;
+   align-items: center;
+ justify-content: space-evenly;   
+       /* border: 2px solid black; */
+}
+
+
+
+
+
+
+
