--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -1,33 +1,25 @@
 .section-1-QS-container{
-    margin-top: 91px;
-    display: block;
-    height: 100%;
+    margin-top: 92px;
+    height: 608px;
     width: 100%;
-    border: solid blue;
+    background-image: url(/assets/quem_somos/firstBanner.svg);
+    background-size: cover;
 }
 
 .section-1-QS-textBox{
     display: flex;
-    
-    border: solid yellow;
 }
 
 .section-1-QS-text{
     font-family: 'Russo One', sans-serif;
     color: #003061;
     position: absolute;
-    font-size: 48px;
+    top: 30rem;
+    right: 0px;
+    font-size: 3rem;
     background-color: #F9F9F9;
-    border-radius: 30px;
-    padding: 7px;
-    border: solid green;
-}
-
-.section-1-QS-img {
-    display: block;
-    height: 100% ;
-    width: 100%;
-    border: solid red;
+    border-radius: 30px 0px 0px 30px;
+    padding: 15px;
 }
 
 .section-2-QS {
@@ -171,5 +163,21 @@
 /* ========================= mobile =========================== */
 
 @media(max-width:994px) {
+
+    .section-1-QS-container{
+        height: 508px;
+    }
+
+    .section-1-QS-text{
+        top: 50rem;
+        left: 0px;
+        right: inherit;
+        font-size: 1.8rem;
+        border-radius: 0px 30px 30px 0px;
+    }
+
+    .section-1-QS-container{
+        background-position: center;
+    }
 
 }
