--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -1,3 +1,5 @@
+/* ================== Section 1 ================= */
+
 .section-1-QS-container{
     margin-top: 92px;
     height: 608px;
@@ -21,6 +23,8 @@
     border-radius: 30px 0px 0px 30px;
     padding: 15px;
 }
+
+/* ================== Section 2 ================= */
 
 .section-2-QS {
     height: 100%;
@@ -58,28 +62,33 @@
     color: #FFFFFF;
 }
 
+/* ================== Section 3 ================= */
+
 .section-3-QS-container{
-    display: block;
-    height: 100%;
+    height: 408px;
     width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+    background-image: url(/assets/quem_somos/middleBanner.png);
+    background-size: cover;
 }
 
 .section-3-QS-text {
-    font-family: 'Oswald', sans-serif;;
-    font-size: 20px;
+    margin-left: 30px;
+    width: 55%;
+    font-family: 'Oswald', sans-serif;
+    font-size: 1.4rem;
     font-weight: 300;
-    position: absolute;
-    width: 35%;
-    margin-top: 5%;
-    margin-left: 7%;
-    line-height: 29.64px;
 }
 
 .section-3-QS-img {
-    display: block;
+    display: none;
     height: 100% ;
     width: 100%;
 }
+
+/* ================== Section 4 ================= */
 
 .section-4-QS {
     height: 100%;
@@ -188,6 +197,29 @@
         width: 90%;
         font-size: 1.8rem;
         text-align: center;
+    }
+
+    .section-3-QS-container{
+        height: 100%;
+        flex-direction: column;
+    }
+    
+    .section-3-QS-text {
+        margin: 0;
+        padding: 25px 25px 25px 25px;
+        width: 100%;
+        font-size: 1.8rem;
+        font-weight: 300;
+        text-align: center;
+    }
+    
+    .section-3-QS-img {
+        display: flex;
+        border-radius: 100px;
+        height: 100px ;
+        width: 100px;
+        margin-bottom: 30px;
+        border: 0.5px solid #dddada;
     }
 
 }
