--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -91,7 +91,7 @@
 /* ================== Section 4 ================= */
 
 .section-4-QS {
-    height: 100%;
+    height: 926px;
     width: 100%;
     display: flex;
     align-items: center;
@@ -99,6 +99,7 @@
 }
 
 .section-4-QS-container {
+    padding-top: 30px;
     width: 100%;
     height: 100%;
     background-color: #003061;
@@ -109,12 +110,12 @@
 
 .section-4-QS-textBox {
     text-align: center;
-    width: 40%;
+    width: 70%;
 }
 
 .section-4-QS-textBox-title {
     font-family: 'Russo One', sans-serif;
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 400;
     color: #FFFFFF;
     margin-top: 1%;
@@ -122,7 +123,7 @@
 
 .section-4-QS-textBox-text {
     font-family: 'Oswald', sans-serif;
-    font-size: 28px;
+    font-size: 2rem;
     font-weight: 300;
     color: #FFFFFF;
     text-align: center;
@@ -136,8 +137,8 @@
 }
 
 .section-4-QS-boxRow-box {
-    height: 433px;
-    width: 410px;
+    height: 100%;
+    width: 33%;
     background-color: #FFFFFF;
     border-radius: 15px;
     display: flex;
@@ -151,14 +152,14 @@
 .section-4-QS-boxRow-box-tittle {
     font-family: 'Oswald', sans-serif;;
     text-align: center;
-    font-size: 24px;
+    font-size: 2rem;
     font-weight: 700;
 }
 
 .section-4-QS-boxRow-box-text {
     font-family: 'Oswald', sans-serif;;
     text-align: center;
-    font-size: 24px;
+    font-size: 1.2rem;
     font-weight: 200;
     width: 100%;
 }
@@ -216,10 +217,37 @@
     .section-3-QS-img {
         display: flex;
         border-radius: 100px;
-        height: 100px ;
-        width: 100px;
+        height: 150px ;
+        width: 150px;
         margin-bottom: 30px;
         border: 0.5px solid #dddada;
     }
+
+    .section-4-QS-boxRow-box {
+        width: 80%;
+    }
+
+}
+
+@media(max-width:1250px) {
+
+    .section-4-QS {
+        height: 100%;
+    }
+
+    .section-4-QS-boxRow {
+        margin-top: 30px;
+        flex-direction: column;
+    }
+
+    .section-4-QS-textBox-title {
+        font-size: 2.5rem;
+        font-weight: 400;
+    }
+    
+    .section-4-QS-textBox-text {
+        font-size: 1.4rem;
+    }
+    
 
 }
