--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -91,7 +91,7 @@
 /* ================== Section 4 ================= */
 
 .section-4-QS {
-    height: 926px;
+    height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
