--- a/css/servicos.css
+++ b/css/servicos.css
@@ -1,4 +1,4 @@
-/* section 1 ========================================*/
+/* ===================== section 1 =========================*/
 .sec1 {
     width: 100%;
     height: 608px;
@@ -6,33 +6,33 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-    /* border: 3px solid red; */
 }
 
-.sec1 h1 {
-    font-family: 'Russo One' , regular ;
-    font-size: 75pt;
+.sec1txt {
+    margin-left: 50px;
+    margin-right: 20px;
+    width: 60%;
+}
+
+.sec1txt h1 {
+    font-family: 'Russo One', regular;
+    font-size: 8.5vw;
     color: #003061;
     text-align: left;
-    position: relative;
-    margin-left: 4rem;
-
-} 
-
-
+}
 
 .sec1Img {
-    display: flex;    
-    /* border: 3px solid red;  */
-}
-.sec1img {
-    width: 32rem;
-    height: 100%;
-    
+    display: flex;
+    justify-content: flex-end;
+    width: 40%;
 }
 
-/* section2 ====================================================*/
+.sec1Img img {
+    width: 90%;
+    height: 90%;
+}
+
+/* ============================== section2 =======================*/
 
 .sec2 {
     width: 100%;
@@ -40,258 +40,123 @@
     background-color: #1e1e1e;
     display: flex;
     align-items: center;
-    justify-content: center; 
-
-    /* border: 3px solid red;  */
+    justify-content: center;
+    padding: 60px;
 }
 
 .sec2txt h2 {
-    width:65%;
-    height: 400;
     font-family: Russo One;
     font-size: 36px;
-    line-height: 43.38px;
-    align-items: center;
-}
-
-.sec2txt {
-    width: 70%;
-    height: 219px;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    justify-content: space-around;
-    gap: 50px;
     text-align: center;
-    font-family: 'Oswald', light;
-    font-style: normal;
-    font-weight: 300;
-    line-height: 36px;
-    font-size: 24pt;    
     color: #FFFFFF;
 }
 
-/* section3 ================================================*/
+.sec2txt p {
+    margin-top: 25px;
+    text-align: center;
+    font-family: 'Oswald', light;
+    line-height: 36px;
+    font-size: 24pt;
+    color: #FFFFFF;
+}
+
+/* ========================= section3 ===========================*/
 
 .section3 {
     width: 100%;
-    height: 783px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* border: 3px solid green; */
 }
 
 
 .sec3 {
+    margin-top: 25px;
+    padding-top: 15px;
     width: 98%;
-    height: 765px;
+    height: 100%;
     background-color: #003061;
     color: #FFFFFF;
     border-radius: 25px;
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-evenly;
-    /* border: 3px solid red; */
-
 }
 
-.bloco1sec3 {
+.blocosec3 {
     width: 30%;
     height: 75%;
+    margin-top: 50px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    
-    /* border: 3px solid red;   */
-    
 }
 
-.bloco1sec3 img {
-    width: 493px;
-    height: 265px;
-    top: 1352;
+.blocosec3 img {
+    width: 100%;
+    height: auto;
 }
 
-.bloco1sec3 h2 {
-    margin: 40px;
+.blocosec3 h2 {
+    font-family: Russo One;
+    font-size: 2vw;
+    margin: 20px;
 }
 
-.bloco1sec3B {
+.blocosec3B {
     margin: 30px;
-    width: 493px;
-    height: 306px;
-    top: 1617px;
-    font-family: 'Oswald', Semi Bold;
-    font-style: normal;
-    font-weight: 500;
-    font-size: 20px;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     text-align: center;
     flex-direction: column;
-    /* border: 3px solid red; */
- }
-
-
-.bloco1sec3B {
-    font-family: 'Oswald', medium;
-    font-size: 20px;
-    text-align: center;
-
-
 }
 
-.bloco2sec3 {
-    width: 30%;
-    height: 75%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    
-    /* border: 3px solid red; */
-
-}
-
-.bloco2sec3B img {
-    width: 493px;
-    height: 265px;
-    top: 1352;
-}
-
-.bloco2sec3B h2 {
-    margin: 35px;
-}
-
-.bloco2sec3B {
-    margin: 30px;
-    width: 493px;
-    height: 306px;
-    top: 1617px;
+.blocosec3B p {
     font-family: 'Oswald', Semi Bold;
     font-style: normal;
     font-weight: 500;
-    font-size: 20px; 
-    display: flex;
-    align-items: center;
-    text-align: center;   
-    flex-direction: column;
+    font-size: 20px;
 }
 
-/* section 4 ========================================= */
+/* ========================== section 4 =============================== */
 
 .sec4 {
     width: 100%;
-    height: 761px;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
-    
-    /* border: 3px solid red;  */
-
 }
 
-.bloco1sec4 {
-    width: 430px;
-    height: 85%;
+.blocosec4 {
+    width: 30%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: baseline;
     text-align: center;
-    margin: 100px 20px 0px 20px;
-    
-    /* border: 3px solid red;    */
+    margin: 20px;
 }
 
-
-.bloco1sec4 h2 {
-    margin: 50px;
-    font-family: 'Oswald' ,bold;
+.blocosec4 h2 {
+    margin: 30px;
+    font-family: 'Oswald', bold;
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 36px;
     text-align: center;
-    
-    /* border: 3px solid red; */
 }
 
-.bloco1sec4 p {
-    width: 349px;
-    height: 391px;
+.blocosec4 p {
+    width: 100%;
+    height: 100%;
     font-family: 'Oswald', Extra light;
     font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    text-align: center;
-    
-    /* border: 3px solid black;  */
-}
-
-
-.bloco2sec4 {
-    width: 430px;
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 100px 20px 0px 20px;
-   
-    /* border: 3px solid red; */
-}
-
-.bloco2sec4 h2 {
-    margin: 50px;
-    font-family: 'Oswald' ,Bold;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    text-align: center;
-}
-
-.bloco2sec4 p {
-    width: 349px;
-    height: 391px;
-    font-family: 'Oswald', Extra light;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    text-align: center;
-}
-
-.bloco3sec4 {
-    width: 430px;
-    height: 85%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    margin: 100px 20px 0px 20px;
-
-    /* border: 3px solid red; */
-}
-
-.bloco3sec4 h2 {
-    margin: 50px;
-    font-family: 'Oswald' ,bold;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 24px;
-    line-height: 36px;
-    text-align: center;
-}
-
-.bloco3sec4 p {
-    width: 349px;
-    height: 391px;
-    font-family: 'Oswald', Extra light;
-    font-style: normal;
-    font-weight: 700;
     font-size: 24px;
     line-height: 36px;
     text-align: center;
@@ -299,51 +164,174 @@
 
 /* ================================section 5======================= */
 
-.sec5 {
+.master-sec5 {
     width: 100%;
-    height: 120px;
-    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.sec5 {
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
-    
-    /* border: 3px solid black; */
+    width: 100%;
+    height: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
-    
-    
 
 .sec5 h1 {
     font-family: Russo One;
-    font-size: 58pt;
-    margin-bottom:51px ;
+    font-size: 5vw;
     color: #003061;
 }
 
-/* ==================carousel  ========================== */
-
-.carousel {
+.master-sec5 .container {
     width: 100%;
-    height: 380px;
-   
-    background-color: #003061;
+    padding: 5px;
+    margin-bottom: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.carousel-item {
-    padding: 100px;
-}
-.carouselImg {
-    width: 100%;
-    height: 100%;
-   display: flex;
-   align-items: center;
- justify-content: space-evenly;   
-       /* border: 2px solid black; */
+.master-sec5 .col-sm {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+/* ========================= mobile =========================== */
 
+@media(max-width:994px) {
 
+    .sec1 {
+        width: 100%;
+        height: 100%;
+        justify-content: space-around;
+        flex-direction: column;
+        padding: 25px 0px 25px 0px;
+    }
 
+    .sec1txt {
+        width: 100%;
+        margin: 0px 0px 25px 0px;
+    }
 
+    .sec1txt h1 {
+        text-align: center;
+        font-size: 9vw;
+    }
 
+    .sec1Img {
+        display: flex;
+        align-items: flex-end;
+        width: 100%;
+    }
 
+    .sec1Img img {
+        width: 90%;
+    }
+
+    .sec2 {
+        width: 100%;
+        height: auto;
+        padding: 30px;
+    }
+
+    .sec2txt h2 {
+        font-size: 6vw;
+    }
+
+    .sec2txt p {
+        font-size: 4vw;
+    }
+
+    .section3 {
+        width: 100%;
+        height: 100%;
+        display: flex;
+    }
+
+    .sec3 {
+        width: 96%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .blocosec3 {
+        margin-top: 20px;
+        width: 96%;
+        height: 100%;
+    }
+
+    .blocosec3 img {
+        width: 80%;
+        height: auto;
+    }
+
+    .blocosec3 h2 {
+        font-size: 7vw;
+    }
+
+    .blocosec3 p {
+        font-size: 5vw;
+    }
+
+    .sec4 {
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    .blocosec4 {
+        width: 80%;
+        height: 100%;
+        margin: 20px;
+    }
+
+    .blocosec4b h2 {
+        font-family: 'Oswald' Bold;
+    }
+
+    .blocosec4b p {
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        font-family: 'Oswald' Extra Light;
+        font-style: normal;
+        font-weight: 200;
+        font-size: 24px;
+        line-height: 36px;
+    }
+
+    .sec5 {
+        margin-bottom: 5px;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .sec5 h1 {
+        margin: 30px;
+        width: 90%;
+        font-size: 7vw;
+        text-align: center;
+    }
+
+    .master-sec5 .row {
+        width: 100%;
+    }
+
+    .master-sec5 .col-sm img {
+        width: 40vw;
+    }
+}
