Feat:Subindo video principal

--- a/css/main.css
+++ b/css/main.css
@@ -255,6 +255,10 @@ header nav {
     transform: rotate(-45deg);
 }
 
+/* ========================= Video =========================== */
+
+
+
 /* ========================= footer =========================== */
 
 .rodape {
