--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 /* ===================== caroussel     ======================= */
-
+/* 
 .carousel {
     width: 100%;
     height: 608px;
@@ -57,6 +57,28 @@
     width: 5%;
     justify-content: flex-start;
     margin-left: 20px;
+} */
+
+.videoNK {
+    height: 400px;
+    /* position:relative; */
+    margin-top: 92px;
+    margin-bottom: 5px;
+    /* padding-bottom: 30%; */
+    background-color: #003061;
+    display: flex;
+}
+
+.videonk {
+    /* margin-top: 92px; */
+    margin-bottom: 3px;
+    /* position:absolute; */
+    top: 0;
+    left: 0; 
+    object-fit: cover;
+
+
+
 }
 
 /* ===================== Banners ======================= */
