--- a/css/home.css
+++ b/css/home.css
@@ -60,9 +60,9 @@
 } */
 
 .videoNK {
-    height: 420px;
+    height: 608px;
     /* position:relative; */
-    margin-top: 92px;
+    /* margin-top: 92px; */
     margin-bottom: 5px;
     /* padding-bottom: 30%; */
     background-color: #003061;
@@ -75,7 +75,7 @@
     /* position:absolute; */
     opacity: 0.6;
     top: 0;
-    left: 0; 
+    left: 0;
     object-fit: cover;
 
 
@@ -225,13 +225,15 @@
 .bottomImg {
     width: 100%;
     height: 100%;
+    border-radius: 50px;
     display: flex;
     justify-content: flex-start;
 }
 
 .bottomImg img {
     box-sizing: content-box;
-    width: 90%;
+    width: 100%;
+    border-radius: 50px;
 }
 
 /* ========================= mobile =========================== */
@@ -329,7 +331,7 @@
         justify-content: flex-start;
         margin-bottom: 20px;
     }
-    
+
     .bottomImg img {
         width: 100%;
     }
