Final pra subir site

--- a/css/quemsomos.css
+++ b/css/quemsomos.css
@@ -4,7 +4,7 @@
     margin-top: 92px;
     height: 608px;
     width: 100%;
-    background-image: url(/assets/quem_somos/firstBanner.svg);
+    background-image: url(../assets/quem_somos/firstBanner.png);
     background-size: cover;
 }
 
